[tool.poetry]
name = "paraffin"
version = "0.2.0a1"
description = "Parallel execution of DVC stages"
authors = ["Fabian Zills <fzills@icp.uni-stuttgart.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.urls]
repository = "https://github.com/zincware/paraffin"

[tool.poetry.dependencies]
python = ">=3.10,<4"
dvc = "^3.51"
typer = {extras = ["all"], version = "^0"}
sqlalchemy = "^2"
celery = "^5"

[tool.poetry.scripts]
paraffin = 'paraffin.cli:app'

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
zntrack = "^0.8.0a5"
pre-commit = "^3.7.1"
dash = "^2.17.1"
pytest = "^8.3.3"
coverage = "^7.6.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]
