[project]
name = "paraffin"
version = "0.3.7"
description = "Parallel execution of DVC stages"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.0",
    "fastapi[standard]>=0.115.7",
    "sqlmodel>=0.0.22",
    "typer>=0.13",
]

[project.scripts]
paraffin = 'paraffin.cli:app'

[project.urls]
Repository = "https://github.com/zincware/paraffin"
Releases = "https://github.com/zincware/paraffin/releases"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pytest>=8.3.4",
    "zntrack>=0.8.2",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/app",
]

[tool.hatch.build.targets.wheel]
artifacts = [
  "paraffin/static/**",
]

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]
